--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "assignment3",
+  "name": "NetsBlox",
   "version": "1.0.0",
-  "description": "Assignment 3",
+  "description": "NetsBlox",
   "main": "/src/server/index.js",
   "type": "module",
   "dependencies": {
@@ -20,7 +20,7 @@
     "start": "node ./src/server/index.js",
     "prettier": "prettier --single-quote --write 'src/**/*js'"
   },
-  "author": "G. Hemingway",
+  "author": "NetsBlox",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.8.7",
